# ProteinMPNN

./: .gitignore  protein_mpnn_run.py  pyproject.toml
colab_notebooks/: ca_only_quickdemo.ipynb  quickdemo.ipynb  quickdemo_wAF2.ipynb
naturalantibody/: models.py  parse_multiple_chains_mp.py  run_on_fasta.py  score.py
proteinmpnn/: __init__.py  config.py  featurize.py  io.py  models.py  parse_multiple_chains_mp.py  protein_mpnn_run.py  protein_mpnn_utils.py  run_on_fasta.py  sample.py  score.py  utils.py
training/: training.py
